# flask-cloud-run-deploy

./: .dockerignore  .gcloudignore  .gitignore  CLOUD_DATABASE_SETUP.md  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py  models.py  settings.py
app/crud/: forms.py  views.py
app/crud/static/css/: styles.css
app/crud/templates/: delete.html  layout_crud.html  login.html  login_delete.html  post.html
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/: index.html  layout.html  post_show.html
