[project]
name = "flask-cloud-run-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-paginate>=2024.4.12",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
]
